--- a/templates/front/_menu_select.js.html.twig
+++ b/templates/front/_menu_select.js.html.twig
@@ -36,7 +36,7 @@
             var areaId = $("#area_menu_select_area").val();
             console.log(areaId);
             console.log(roomId);
-            var url = '{{ path("grr_front_month", {'area': 'areaid','room': 'roomid','year':current|date('Y'),'month':current|date('n')}) }}';
+            var url = '{{ path("grr_front_month", {'area': 'areaid','room': 'roomid','year':firstDay|date('Y'),'month':firstDay|date('n')}) }}';
             url = url.replace("roomid", roomId);
             url = url.replace("areaid", areaId);
             if (url) {
@@ -50,7 +50,7 @@
         $('#area_menu_select_area').on('change', function () {
             var areaId = $(this).val();
 
-            var url = '{{ path("grr_front_month", {'area': 'areaid','year':current|date('Y'),'month':current|date('n')}) }}';
+            var url = '{{ path("grr_front_month", {'area': 'areaid','year':firstDay|date('Y'),'month':firstDay|date('n')}) }}';
             url = url.replace("areaid", areaId);
             if (url) {
                 window.location = url;
