--- a/templates/calendar/navigation/_cell_day.html.twig
+++ b/templates/calendar/navigation/_cell_day.html.twig
@@ -1,3 +1,3 @@
 {#<span class="text-muted">    ({{ numericDay }})</span>#}
 
-<a href="{{ generateRouteDayView(dateTime|date('j'))}}">{{ dateTime | date('j') }}</a>
+<a href="{{ generateRouteDayView(day|date('j'))}}">{{ day | date('j') }}</a>
