--- a/templates/calendar/navigation/_cell_week.html.twig
+++ b/templates/calendar/navigation/_cell_week.html.twig
@@ -1,5 +1,5 @@
-<td>
+<td class="text-muted">
     <a href="{{ generateRouteWeekView(numericWeek) }}">
-        {{ numericWeek }}
+        <span class="text-muted">{{ 'week.initial'|trans({},'actions') }}{{ numericWeek }}</span>
     </a>
 </td>
