--- a/templates/calendar/navigation/_month.html.twig
+++ b/templates/calendar/navigation/_month.html.twig
@@ -3,7 +3,7 @@
     <tr>
         <th class="text-center" colspan="8">
             <a href="{{ generateRouteMonthView() }}">
-                {{ firstDay|date('F Y') }}
+             {{ firstDay|date('F') | trans }} {{ firstDay|date('Y') }}
             </a>
         </th>
     </tr>
