--- a/templates/front/day.html.twig
+++ b/templates/front/day.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-    {% include 'front/_navigation.html.twig' %}
+    {% include 'calendar/navigation/_navigation.html.twig' %}
 
     <h3 class="text-center text-success">{{ current|date('m Y') }}</h3>
 
