--- a/templates/front/week.html.twig
+++ b/templates/front/week.html.twig
@@ -4,21 +4,19 @@
 
 {% block body %}
 
-    {% include 'front/_navigation.html.twig' %}
+    {% include 'calendar/navigation/_navigation.html.twig' %}
 
     <h3 class="text-center text-success">
         {{ 'week'|trans }} du {{ week.firstDay|date('d-m') }}
         au {{ week.lastDay|date('d-m') }}
     </h3>
 
-    {{ data|raw }}
-
     <table class="table table-bordered">
         <thead>
         <tr>
             <th>{{ 'ressources'|trans }}</th>
             {% for day in week.days %}
-                <th>{{ day|date('d') }}</th>
+                <th>{{ day|date('l') |trans|lower }} {{ day|date('d') }} {{ day|date('F')|trans|lower }}</th>
             {% endfor %}
         </tr>
         </thead>
@@ -26,8 +24,12 @@
         {% for room in rooms %}
             <tr>
                 <td>{{ room.name }}</td>
-                {% for day in week.days %}
-                    <th>entry</th>
+                {% for day in week.data %}
+                    <th>
+                        {% for entry in day.entries %}
+                            {{ entry.name }}
+                        {% endfor %}
+                    </th>
                 {% endfor %}
             </tr>
         {% endfor %}
