--- a/templates/front/month.html.twig
+++ b/templates/front/month.html.twig
@@ -16,5 +16,5 @@
 {% endblock %}
 
 {% block scripts %}
-    {% include 'front/_menu_select.js.html.twig' %}
+    {% include 'calendar/navigation/_menu_select.js.html.twig' %}
 {% endblock %}
