--- a/templates/calendar/navigation/_month.html.twig
+++ b/templates/calendar/navigation/_month.html.twig
@@ -4,7 +4,7 @@
     <thead>
     <tr>
         <th class="text-center" colspan="8">
-            <a href="{# generateRouteMonthView() #}">
+            <a href="{{ generateRouteMonthView() }}">
                 {{ firstDay.monthName|upper }} {{ firstDay.year }}
             </a>
         </th>
