--- a/templates/calendar/navigation/_month.html.twig
+++ b/templates/calendar/navigation/_month.html.twig
@@ -14,7 +14,7 @@
     <tr>
         <th>{{ 'week'|trans }}</th>
         {% for dayName in listDays %}
-            <th>{{ dayName|trans }}</th>
+            <th scope="col">{{ dayName|trans }}</th>
         {% endfor %}
     </tr>
     </thead>
