--- a/templates/calendar/data/_cell_day_data.html.twig
+++ b/templates/calendar/data/_cell_day_data.html.twig
@@ -1,4 +1,6 @@
-<span class="text-muted">{{ day.day }}</span>
-{#% for entry in day.entries %}
-    <p>{{ entry.name }}</p>
-{% endfor %#}
+<td>
+    <span class="text-muted">{{ day.date.day }}</span>
+    {% for entry in day.entries %}
+        <p>{{ entry.name }}</p>
+    {% endfor %}
+</td>
