--- a/templates/calendar/navigation/_cell_day.html.twig
+++ b/templates/calendar/navigation/_cell_day.html.twig
@@ -4,6 +4,7 @@
 {% if daySelected == day.day %}
     {% set classDay = "table-info" %}
 {% endif %}
+
 <td class="{{ classDay }}">
-    <a href="{{ generateRouteDayView(day|date('j')) }}">{{ day.day }}</a>
+    <a href="{{ generateRouteDayView(day.day) }}">{{ day.day }}</a>
 </td>
