--- a/templates/front/day.html.twig
+++ b/templates/front/day.html.twig
@@ -7,7 +7,7 @@
     {% include 'calendar/navigation/_navigation.html.twig' %}
 
     <h3 class="text-center text-success">
-        {{ firstDay|date('l') |trans }} {{ firstDay|date('j') }} {{ firstDay|date('F')|trans|lower }} {{ firstDay|date('Y') }}
+        {{ firstDay.dayName }} {{ firstDay.day }} {{ firstDay.monthName }} {{ firstDay.year }}
     </h3>
 
     <table class="table table-bordered">
