--- a/templates/front/month.html.twig
+++ b/templates/front/month.html.twig
@@ -5,9 +5,10 @@
 {% block body %}
 
     {% include 'calendar/navigation/_navigation.html.twig' %}
+    {{ monthNavigation(monthModel) }}
 
     <h3 class="text-center text-success">
-        {{ firstDay.monthName|upper }} {{ firstDay.year }}<br />
+        {{ firstDay.monthName|title }} {{ firstDay.year }}<br />
         {{ area }} - {% if room %} {{ room }} {% else %} {{ 'room.all'|trans({},'actions') }} {% endif %}
     </h3>
 
