--- a/templates/calendar/navigation/_button_next.html.twig
+++ b/templates/calendar/navigation/_button_next.html.twig
@@ -1,3 +1,3 @@
-<a href="{{ generateRouteMonthView(nextMonth|date('Y'), nextMonth|date('n')) }}" title="{{ 'next'|trans({},'actions') }}">
+<a href="{{ generateRouteMonthView(nextMonth.year, nextMonth.month) }}" title="{{ 'next'|trans({},'actions') }}">
     <i class="fas fa-arrow-right"></i>
 </a>
