--- a/templates/front/week.html.twig
+++ b/templates/front/week.html.twig
@@ -4,6 +4,9 @@
 
 {% block body %}
 
+    {% set weekSelected = app.request.get('week') %}
+    {% set daySelected = app.request.get('day') %}
+
     {% include 'calendar/navigation/_top_navigation.html.twig' %}
 
     <h3 class="text-center text-success">
