--- a/templates/calendar/navigation/_top_navigation.html.twig
+++ b/templates/calendar/navigation/_top_navigation.html.twig
@@ -1,9 +1,9 @@
 <div class="row">
     <div class="col-2">
-        {{ render(controller('App\\Controller\\NavigationController::menu')) }}
+        {{ grrMenuNavigation() }}
     </div>
     <div class="col-5">
-        {{ render(controller('App\\Controller\\NavigationController::month')) }}
+        {{ grrMonthNavigation() }}
     </div>
     <div class="col-5">
 
