--- a/templates/area/index.html.twig
+++ b/templates/area/index.html.twig
@@ -5,7 +5,8 @@
 {% block body %}
     <h1>{{ 'area.index.title'|trans({}, 'actions') }}</h1>
 
-    <a class="btn btn-primary" href="{{ path('grr_area_new') }}"><i class="fas fa-plus"></i> {{ 'area.new.title'| trans({}, 'actions') }}</a>
+    <a class="btn btn-primary" href="{{ path('grr_area_new') }}"><i
+                class="fas fa-plus"></i> {{ 'area.new.title'| trans({}, 'actions') }}</a>
     <br/> <br/>
 
     <table class="table table-bordered">
@@ -27,7 +28,7 @@
                 <td>{{ area.orderDisplay }}</td>
                 <td>{{ area.morningstartsArea }}</td>
                 <td>{{ area.eveningendsArea }}</td>
-                <td></td>
+                <td>{{ area.rooms|length }}</td>
             </tr>
         {% else %}
             <tr>
