--- a/templates/entry/new.html.twig
+++ b/templates/entry/new.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>{{ 'entry.new.title'|trans({},'actions') }}</h1>
 
-    {{ include('entry/_form.html.twig') }}
+    {%   include('entry/_form.html.twig') %}
 
     <br/>
     <a href="{{ path('grr_entry_index') }}"><i
