--- a/templates/calendar/data/_cell_day_data.html.twig
+++ b/templates/calendar/data/_cell_day_data.html.twig
@@ -1,6 +1,16 @@
+{% set action = app.request.get('_route') %}
+
 <td>
-    <span class="text-muted">{{ day.day }}</span>
-    <a href="{{ path('grr_entry_new',{'area': app.request.get('area').id}) }}" class="float-right" title="{{ 'btn.entry.add.title'|trans }}"> <i class="fas fa-plus"></i> </a>
+    {% if action == 'grr_front_month' %}
+        <a href="{{ generateRouteDayView(day.day) }}" class="float-right">
+            {{ day.day }}
+        </a>
+    {% else  %}
+        <span class="text-muted">{{ day.day }}</span>
+        <a href="{{ generateRouteAddEntry(1,2,3) }}" class="float-right" title="{{ 'btn.entry.add.title'|trans }}"> <i
+                    class="fas fa-plus"></i> </a>
+    {% endif %}
+
     {% for entry in day.entries %}
         <p>{{ entry.name }}</p>
     {% endfor %}
