--- a/templates/front/week/_cell_day_data.html.twig
+++ b/templates/front/week/_cell_day_data.html.twig
@@ -1,9 +1,7 @@
 <td>
-    <span class="text-muted">{{ day.day }}</span>
-    <a href="{{ generateRouteAddEntry(day,room) }}" class="float-right" title="{{ 'btn.entry.add.title'|trans }}"> <i
+    <a href="{{ generateRouteAddEntry(area.id,room.id, day.day) }}" class="float-right" title="{{ 'btn.entry.add.title'|trans }}"> <i
                 class="fas fa-plus"></i> </a>
-
     {% for entry in day.entries %}
-        <p>{{ entry.name }}</p>
+        {{ entry.name }}
     {% endfor %}
 </td>
