--- a/templates/front/day/_cell_day_data.html.twig
+++ b/templates/front/day/_cell_day_data.html.twig
@@ -3,6 +3,8 @@
                 class="fas fa-plus"></i> </a>
 
     {% for entry in day.entries %}
-        <p>{{ entry.name }}</p>
+        <p>
+            <a href="{{ path('grr_entry_show', {'id': entry.id}) }}">{{ entry.name }}</a>
+        </p>
     {% endfor %}
 </td>
