--- a/templates/front/day/_cell_day_data.html.twig
+++ b/templates/front/day/_cell_day_data.html.twig
@@ -1,5 +1,8 @@
 {% if position == 0 %}
     <td rowspan="{{ entry.cellules }}" class="table-info">{{ entry.name }}</td>
 {% else %}
-    <td></td>
+    <td>
+    <a href="{{ generateRouteAddEntry(area.id,room.id, day.day) }}" class="float-right" title="{{ 'btn.entry.add.title'|trans }}"> <i
+                class="fas fa-plus"></i> </a>
+    </td>
 {% endif %}
