--- a/templates/entry/_form.html.twig
+++ b/templates/entry/_form.html.twig
@@ -10,7 +10,5 @@
     </div>
 </div>
 
-
-
-<button class="btn btn-primary">{{ button_label|default('Save') }}</button>
+<input class="btn btn-primary" type="submit" name="submit">{{ button_label|default('Save') }}</input>
 {{ form_end(form) }}
