--- a/templates/entry/_form_entry.html.twig
+++ b/templates/entry/_form_entry.html.twig
@@ -1,5 +1,6 @@
 {{ form_row(form.name) }}
 {{ form_row(form.startTime) }}
+{{ form_row(form.endTime) }}
 
 {# if admin
 {{ form_row(form.beneficiaire) }}
