--- a/templates/front/day/_cell_day_data.html.twig
+++ b/templates/front/day/_cell_day_data.html.twig
@@ -1,10 +1,4 @@
-{% if position == 0 %}
-    <td rowspan="{{ entry.cellules }}" class="table-info">
-        {{ entry.name }} <span class="text-muted">({{ entry.startTime|date('H:i') }} to {{ entry.endTime|date('H:i') }})</span>
-    </td>
-{% else %}
-    <td>
-    <a href="{{ generateRouteAddEntry(area.id,room.id, day.day) }}" class="float-right" title="{{ 'btn.entry.add.title'|trans }}"> <i
-                class="fas fa-plus"></i> </a>
-    </td>
-{% endif %}
+<td rowspan="{{ entry.cellules }}" class="table-info">
+    {{ entry.name }} <span
+            class="text-muted">({{ entry.startTime|date('H:i') }} to {{ entry.endTime|date('H:i') }})</span>
+</td>
