separation front / admin

--- a/templates/admin/entry/new.html.twig
+++ b/templates/admin/entry/new.html.twig
@@ -1,11 +1,11 @@
-{% extends 'layout_front.html.twig' %}
+{% extends '@grr_front/layout_front.html.twig' %}
 
 {% block title %}{{ 'entry.new.title'|trans({},'actions') }}{% endblock %}
 
 {% block body %}
     <h1>{{ 'entry.new.title'|trans({},'actions') }}</h1>
 
-    {%   include('@grr_admin/entry/_form.html.twig') %}
+    {%   include('@grr_admin/entry/form/_form.html.twig') %}
 
     <br/>
     <a href="{{ path('grr_admin_entry_index') }}"><i
