--- a/templates/admin/entry/form/_form_entry.html.twig
+++ b/templates/admin/entry/form/_form_entry.html.twig
@@ -6,7 +6,7 @@
 {{ form_row(form.beneficiaire) }}
 #}
 
-{% include 'entry/_field_duration.html.twig' %}
+{% include '@grr_admin/entry/form/_field_duration.html.twig' %}
 
 <div class="row">
     <div class="col-6">
