--- a/templates/front/day/day.html.twig
+++ b/templates/front/day/day.html.twig
@@ -10,7 +10,7 @@
         {{ day.dayName|title }} {{ day.day }} {{ day.monthName }} {{ day.year }}
     </h3>
 
-    <table class="table table-bordered">
+    <table class="table table-bordered table-hover">
         <thead>
         <tr>
             <th scope="col">{{ 'Hours'|trans }}</th>
