--- a/templates/front/entry/_actions.html.twig
+++ b/templates/front/entry/_actions.html.twig
@@ -1,7 +1,7 @@
-<a href="{{ path('grr_admin_entry_edit', { 'id': entry.id }) }}" role="button"
+<a href="{{ path('grr_front_entry_edit', { 'id': entry.id }) }}" role="button"
    class="btn btn-primary"><i class="far fa-edit"></i> {{ 'form.btn.edit'|trans({}, 'actions') }}</a>
 
-<a href="{{ path('grr_admin_entry_index') }}" class="btn btn-primary" role='button'><i class="fas fa-list"></i>
+<a href="{{ path('grr_front_entry_index') }}" class="btn btn-primary" role='button'><i class="fas fa-list"></i>
     {{ 'back.to.list'|trans({}, 'actions') }}
 </a>
 
