--- a/templates/front/entry/show.html.twig
+++ b/templates/front/entry/show.html.twig
@@ -5,6 +5,8 @@
 {% block body %}
     <h1>{{ entry.name }}</h1>
 
+    {% include '@grr_front/entry/_actions.html.twig' %}
+
     <div class="row">
         <div class="col-6">
 
@@ -93,4 +95,5 @@
         {% include 'repeat/_detail.html.twig' %}
     {% endif %}
 
+    {{ include('@grr_front/entry/_delete_form.html.twig') }}
 {% endblock %}
